# longtable

./: .pre-commit-config.yaml  BENCHMARK_PLAN.md  CHANGELOG.md  Cargo.toml  IDEAS.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  LONGTABLE_SPEC.md  README.md  REFACTORING_PLAN.md  SPECIFICATION.md  TODOs.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/longtable_debug/: Cargo.toml
crates/longtable_debug/benches/: debug_benchmarks.rs  scale_benchmarks.rs
crates/longtable_debug/src/: config.rs  lib.rs
crates/longtable_debug/src/explain/: derived.rs  mod.rs  query.rs  why.rs
crates/longtable_debug/src/timeline/: branch.rs  diff.rs  history.rs  merge.rs  mod.rs
crates/longtable_debug/src/trace/: buffer.rs  format.rs  mod.rs  record.rs
crates/longtable_engine/: Cargo.toml
crates/longtable_engine/benches/: engine_benchmarks.rs  scale_benchmarks.rs
crates/longtable_engine/src/: constraint.rs  derived.rs  lib.rs  pattern.rs  provenance.rs  query.rs  rule.rs  spike.rs  tick.rs
crates/longtable_engine/src/rule/: compiler.rs
crates/longtable_foundation/: Cargo.toml
crates/longtable_foundation/benches/: foundation_benchmarks.rs
crates/longtable_foundation/src/: collections.rs  entity.rs  error.rs  intern.rs  lib.rs  types.rs  value.rs
crates/longtable_language/: Cargo.toml
crates/longtable_language/benches/: language_benchmarks.rs  scale_benchmarks.rs
crates/longtable_language/src/: ast.rs  compiler.rs  declaration.rs  fuzz_tests.rs  gensym.rs  lexer.rs  lib.rs  macro_def.rs  macro_expander.rs  macro_registry.rs  module_registry.rs  namespace.rs  opcode.rs  parser.rs  pretty.rs  span.rs  stdlib_macros.rs  token.rs  visitor.rs  vm.rs
crates/longtable_language/src/declaration/: analyzer.rs  mod.rs  tests.rs  types.rs
crates/longtable_language/src/vm/: context.rs  native.rs  tests.rs
crates/longtable_language/src/vm/native/: arithmetic.rs  collection.rs  math.rs  mod.rs  predicates.rs  string.rs
crates/longtable_parser/: Cargo.toml
crates/longtable_parser/src/: action.rs  command.rs  lib.rs  noun_phrase.rs  parser.rs  pronouns.rs  scope.rs  stdlib.rs  syntax.rs  tokenizer.rs  vocabulary.rs
crates/longtable_runtime/: Cargo.toml
crates/longtable_runtime/benches/: runtime_benchmarks.rs  serialization_benchmarks.rs
crates/longtable_runtime/src/: editor.rs  highlight.rs  lib.rs  repl.rs  serialize.rs  session.rs
crates/longtable_runtime/tests/: adventure_test.rs
crates/longtable_stdlib/: Cargo.toml
crates/longtable_stdlib/src/: lib.rs
crates/longtable_stdlib/stdlib/: core.lt
crates/longtable_storage/: Cargo.toml
crates/longtable_storage/benches/: scale_benchmarks.rs  storage_benchmarks.rs
crates/longtable_storage/src/: component.rs  entity.rs  lib.rs  relationship.rs  schema.rs  world.rs
examples/: test_rec.lt
examples/adventure/: README.md  _.lt  actions.lt  commands.lt  components.lt  relationships.lt  rules.lt  vocabulary.lt
examples/adventure/data/: world.lt
examples/counter/: _.lt
examples/logic-grid/: _.lt  core.lt  manatee.lt  solve.lt  test.lt
examples/sudoku/: _.lt  puzzles.lt  solver.lt  stdlib.lt  test.lt
examples/sudoku/data/: grid.lt  schemas.lt
src/: lib.rs
tests/engine/: constraints.rs  main.rs  patterns.rs  queries.rs  rules.rs
tests/examples/: adventure.rs  adventure_commands.rs  counter.rs  main.rs
tests/foundation/: collections.rs  errors.rs  main.rs  values.rs
tests/integration/: main.rs  speculation.rs  tick_cycle.rs  time_travel.rs
tests/language/: lexer.rs  main.rs  parser.rs  vm.rs
tests/parser/: action_tests.rs  main.rs  noun_resolution_tests.rs  parser_integration_tests.rs  syntax_matching_tests.rs  tokenizer_tests.rs  vocabulary_tests.rs
tests/storage/: components.rs  entities.rs  main.rs  relationships.rs  world.rs
