[workspace]
resolver = "2"
members = [
    "crates/longtable_foundation",
    "crates/longtable_storage",
    "crates/longtable_language",
    "crates/longtable_parser",
    "crates/longtable_engine",
    "crates/longtable_stdlib",
    "crates/longtable_runtime",
    "crates/longtable_debug",
]

# Root package for workspace-level integration tests
[package]
name = "longtable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rule-based simulation engine combining a LISP-like DSL with an archetype-based ECS"

[dependencies]
longtable_foundation.workspace = true
longtable_storage.workspace = true
longtable_language.workspace = true
longtable_engine.workspace = true
longtable_stdlib.workspace = true
longtable_runtime.workspace = true
longtable_debug.workspace = true

[dev-dependencies]
proptest.workspace = true

# Integration test targets
[[test]]
name = "foundation"
path = "tests/foundation/main.rs"

[[test]]
name = "storage"
path = "tests/storage/main.rs"

[[test]]
name = "language"
path = "tests/language/main.rs"

[[test]]
name = "engine"
path = "tests/engine/main.rs"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Unlicense"
repository = "https://github.com/ndouglas/longtable"
keywords = ["simulation", "rules-engine", "ecs", "lisp", "game"]
categories = ["game-development", "simulation"]

[workspace.dependencies]
# Workspace crates
longtable_foundation = { path = "crates/longtable_foundation" }
longtable_storage = { path = "crates/longtable_storage" }
longtable_language = { path = "crates/longtable_language" }
longtable_parser = { path = "crates/longtable_parser" }
longtable_engine = { path = "crates/longtable_engine" }
longtable_stdlib = { path = "crates/longtable_stdlib" }
longtable_runtime = { path = "crates/longtable_runtime" }
longtable_debug = { path = "crates/longtable_debug" }

# Persistent data structures
im = "15"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
rmp-serde = "1"

# Random number generation (deterministic)
rand = "0.8"
rand_chacha = "0.3"

# Testing
proptest = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# REPL / Line editing
rustyline = { version = "15", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
