[package]
name = "longtable_debug"
description = "Tracing, debugging, and time travel for Longtable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
longtable_foundation.workspace = true
longtable_storage.workspace = true
longtable_engine.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "debug_benchmarks"
harness = false

[[bench]]
name = "scale_benchmarks"
harness = false
