[package]
name = "longtable_engine"
description = "Rule engine, pattern matching, queries, and constraints for Longtable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
longtable_foundation.workspace = true
longtable_storage.workspace = true
longtable_language.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "engine_benchmarks"
harness = false

[[bench]]
name = "scale_benchmarks"
harness = false
