[package]
name = "longtable_language"
description = "Lexer, parser, compiler, and bytecode VM for Longtable DSL"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
longtable_foundation.workspace = true
longtable_storage.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "language_benchmarks"
harness = false
