[package]
name = "longtable_stdlib"
description = "Standard library functions for Longtable DSL"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
longtable_foundation.workspace = true
longtable_storage.workspace = true
longtable_language.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
